# eo_tools

./: .env  .gitignore  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.alt  Dockerfile.snap  LICENSE  README.md  TODO.md  bench.txt  deps_recipe.2025.1.0.txt  deps_recipe_2024.10.1.txt  deps_toml_2024.8.1.txt  docker-compose-snap.yml  docker-compose.yml  environment-cf.yaml  environment-dbg-pyproj.yaml  environment.yaml  environment_snapshot_27052024.yml  eodag_config_example.yml  generate_pyproject_toml.py  mem_ref.txt  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  start_tile_server.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
config/: config.ini
data/: Alps.geojson  Andorra_tiny.geojson  Berlin.geojson  Berlin_footprint.geojson  Bretagne_AOI.geojson  Erta_Ale_poly.geojson  Erta_Ale_rect.geojson  Etna.geojson  Kilauea.geojson  Morocco_AOI.geojson  Morocco_small.geojson  Morocco_tiny.geojson  Nevado-del-Ruiz.geojson  Nyamuragira.geojson  Potsdam.geojson  lut_5.tif  lut_6.tif  marketing_aoi.geojson  search_Potsdam_2016_2024.geojson  search_Potsdam_2016_2024_S2.geojson  test_dem_aoi.geojson  test_dem_ref.tif
demo/: README.md  copy_andora_ts_series.py  copy_erta_ale_ts_series.py  copy_etna_ts_series.py  discover-and-process-s2.ipynb  download-partial-s1-ts-andorra.ipynb  download-partial-s1-ts-berlin.ipynb  download-partial-s1-ts-erta-ale.ipynb  download-partial-s1-ts-etna.ipynb
docker/: entrypoint.sh  esa-snap.varfile
docs/: api.md  dem_api.md  discover-and-process-s2.ipynb  download-dem.ipynb  index.md  requirements.txt  s1-custom-pipeline.ipynb  s1-discover-insar-pairs.ipynb  s1-easy-h-alpha-dual.ipynb  s1-easy-polsar-cov.ipynb  s1-easy-slc-geocoding.ipynb  s1-easy-terrain-flattening.ipynb  s1-easy-tops-insar.ipynb  s1-goldstein-phase-denoising.ipynb  s1-partial-product-download.ipynb  s1-partial-product-processing.ipynb  s1_download_api.md  s1_process_api.md  s1_util_api.md  s2_api.md  util_api.md
eo_tools/: NOTICE  S1-core.py  S1-proc.py  S1.py  S1_dev.py  S2.py  S5P.py  _keep_for_later.txt  auxils.py  bench.py  cli.py  dem.py  download_ASF.py  util.py
eo_tools_dev/: snap.py  util.py
graph/: BandMathPhase.xml  Calib.xml  Coh_TPM_continued_proc_graph.xml  Coh_tmp_prep_graph.xml  MasterSlaveIntensity.xml  S1-TOPSAR-Coregistration-ESD.xml  S1-TOPSAR-Coregistration-dbg.xml  S1-TOPSAR-Coregistration.xml  S1-TOPSAR-Interferogram.xml  TOPSAR Coreg Coherence VV IW2 to GeoTiff.xml  TOPSAR Coreg Interferogram IW2 to GeoTiff.xml  TOPSAR-Coherence.xml  TOPSAR-Interferogram.xml  TOPSAR-RD-TerrainCorrection.xml  TOPSAR_coh_geocode_IW_to_geotiff.xml  TOPSAR_esd_coh_geocode_IW_to_geotiff.xml  TOPSAR_ifg_geocode_IW_to_geotiff.xml  TOPSAR_ifg_geocode_IW_to_geotiff_test_phase.xml
notebooks-cf/: discover-and-process-s2.ipynb  download-dem.ipynb  s1-change-detection-pipeline.ipynb  s1-discover-and-download.ipynb  s1-discover-insar-pairs.ipynb  s1-easy-h-alpha-dual.ipynb  s1-easy-slc-geocoding.ipynb  s1-easy-terrain-flattening.ipynb  s1-easy-tops-insar.ipynb  s1-goldstein-phase-denoising.ipynb  s1-iw-tops-processing.ipynb  s1-partial-product-download.ipynb  (+2 more)
(+300 files in other folders)
