[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "eo_tools"
version = "2026.3.0"
description = "A toolbox for easily searching, downloading & processing remote sensing imagery from various public sources. "
dependencies = ["python==3.12.13", "pyproj==3.7.2", "pytest==9.0.2", "gdal==3.12.2", "libgdal-jp2openjpeg==3.12.2", "rasterio==1.5.0", "pyrosar==0.35.0", "spatialist==0.18.0", "pip==26.0.1", "pystac==1.14.3", "pystac-client==0.9.0", "geopandas==1.1.3", "pandas==2.2.3", "eodag==3.10.0", "ipykernel==7.2.0", "ipywidgets==8.1.8", "black==26.3.1", "scikit-image==0.26.0", "ipyleaflet==0.20.0", "folium==0.20.0", "tqdm==4.67.3", "xmltodict==1.0.4", "httpx==0.28.1", "xarray==2026.2.0", "netcdf4==1.7.4", "rioxarray==0.22.0", "numba==0.64.0", "dask==2026.3.0", "bottleneck==1.6.0", "planetary-computer==1.0.0"]
[[project.authors]]
name = "Olivier D'Hondt"
email = "dhondt.olivier@gmail.com"

[tool.setuptools]
packages = [ "eo_tools", "eo_tools.S1",]
include-package-data = true
