[build-system]
requires = ["setuptools>=61", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "eo_tools"
version = "2026.6.0"
description = "A toolbox for easily searching, downloading & processing remote sensing imagery from various public sources. "

requires-python = ">=3.12,<3.13"
dependencies = [
    "pyproj",
    "pytest",
    "rasterio",
    "pyrosar",
    "spatialist",
    "pip",
    "pystac",
    "pystac-client",
    "geopandas",
    "pandas",
    "eodag",
    "ipykernel",
    "ipywidgets",
    "black",
    "scikit-image",
    "ipyleaflet",
    "folium",
    "tqdm",
    "xmltodict",
    "httpx",
    "xarray",
    "netcdf4",
    "rioxarray",
    "numba",
    "dask",
    "bottleneck",
    "planetary-computer",
]
[[project.authors]]
name = "Olivier D'Hondt"
email = "dhondt.olivier@gmail.com"

[tool.setuptools]
packages = [ "eo_tools", "eo_tools.S1",]
include-package-data = true
